# opentelemetry-dotnet-instrumentation

./: .clang-format  .clomonitor.yml  .cspell.json  .dockerignore  .editorconfig  .gitattributes  .gitignore  .lycheeignore  .markdownlint.yaml  .markdownlintignore  BRANCHES AND REMOTES.md  CHANGELOG.md  Common.Packages.props  Common.props  Common.targets  Datadog.Trace.Native.sln  Datadog.Trace.proj  Datadog.Trace.sln  Directory.Build.props  Directory.Packages.props  Dockerfile.build-managed-dll  GlobalSuppressions.cs  LICENSE  LICENSE-3rdparty.csv  NEXT-GEN-CI-TESTING.md  OpenTelemetry.AutoInstrumentation.nuspec  OpenTelemetry.AutoInstrumentation.proj  OpenTelemetry.AutoInstrumentation.sln  OpenTelemetry.AutoInstrumentation.slnx  OpenTelemetry.AutoInstrumentation.snk  OpenTelemetry.AutoInstrumentation.snk.base64  OpenTelemetry.ClrProfiler.proj  OpenTelemetry.ClrProfiler.sln  OpenTelemetry.DotNet.Auto.psm1  OpenTelemetry.Dotnet.Auto.psm1  README.md  SECURITY-INSIGHTS.yml  azure-pipelines.yml  build.ps1  build.sh  (+21 more)
.azure-pipelines/: benchmarks.yml  crank.yml  integration-tests.yml  mininal-pipeline.yml  packages.yml  runner.yml  setup_tracer.ps1  ultimate-pipeline.yml  unit-tests.yml
.config/: dotnet-tools.json
.cspell/: company-terms.txt  contributors.txt  dot-net.txt  other.txt
.devcontainer.example/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  codeql-config.yml  component_owners.yml  dependabot.yml  pull_request_template.md  renovate.json5  security-insights.yml
.nuke/: build.schema.json
.vscode.example/: settings.json  tasks.json
DemoNetCore31/: DemoNetCore31.csproj  Program.cs
DemoNetFx45/: Program.cs
OpenTelemetry.DynamicActivityBinding/: ActivityFactory.cs  ActivityStub.cs  DynamicLoader.cs  Log.cs  OpenTelemetry.DynamicActivityBinding.csproj  PackagedAssemblyLookup.cs
blog/: 2020-09-15-datadog-apm-in-azure-service-fabric.md
dev/: README.md  codespaces-init.sh  docker-compose.yaml  envvars.sh  instrument.sh  otel-config.yaml  prometheus.yaml  wait-local-port.sh
docker/: alpine.dockerfile  centos-build.dockerfile  centos-stream9.dockerfile  centos.dockerfile  debian-arm64.dockerfile  debian.dockerfile  docker-entrypoint.sh  ubuntu1604.dockerfile  ubuntu1804.dockerfile
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DEVELOPING.md  POC_README.md  PULL_FROM_UPSTREAM.md  README.md  README_DATADOG.md  RELEASING.md  USAGE.md  VERSIONING.md  assembly-conflict-resolution.md  config.md  design.md  developing.md  file-based-configuration.md  handling-opentelemetry-references.md  iis-instrumentation.md  instrumentation-libraries.md  log-trace-correlation.md  log4net-bridge.md  log4net-context-injection.md  manual-instrumentation.md  netfx-appdomain-strategy.md  nlog-bridge.md  nocode-instrumentation.md  plugins.md  pull_from_upstream.md  releasing.md  troubleshooting.md  using-the-nuget-packages.md  versioning.md  wcf-config.MD  wcf-config.md  windows-service-instrumentation.md
examples/: Directory.Build.props  Makefile  README.md  docker-compose.yaml  otel-dotnet.env
honeypot/: Datadog.Dependabot.Honeypot.csproj
next-gen/: .editorconfig  CHANGELOG.md  CodeAnalysis.ruleset  Directory.Build.props  Directory.Packages.props  GlobalSuppressions.cs  NEXT-GEN-CI-TESTING.md  RELEASING.md  global.json  keypair.snk  next-gen.sln  stylecop.json  test-next-gen-ci.ps1  validate-next-gen.ps1
samples/: README.md  (+3 more)
src/OpenTelemetry.AutoInstrumentation.Native/: AGENTS.md  CMakeLists.txt  OpenTelemetry.AutoInstrumentation.Native.DLL.vcxproj  OpenTelemetry.AutoInstrumentation.Native.def  OpenTelemetry.AutoInstrumentation.Native.vcxproj  README.md  Resource.rc  assembly_redirection.h  assembly_redirection_net.h  assembly_redirection_netfx.h  bytecode_instrumentations.h  calltarget_rewrite_tokens.cpp  calltarget_rewrite_tokens.h  calltarget_tokens.cpp  calltarget_tokens.h  calltarget_trampoline.cpp  calltarget_trampoline.h  captured_frame.h  class_factory.cpp  class_factory.h  clr_helpers.cpp  clr_helpers.h  clr_runtime_capture.cpp  clr_runtime_capture.h  com_ptr.h  configuration.cpp  configuration.h  contention_event_payloads.h  contention_monitor.cpp  contention_monitor.h  continuous_profiler.cpp  continuous_profiler.h  continuous_profiler_clr_helpers.cpp  continuous_profiler_clr_helpers.h  cor_profiler.cpp  cor_profiler.h  cor_profiler_base.cpp  cor_profiler_base.h  deployment_detection.h  dllmain.cpp  (+103 more)
src/OpenTelemetry.AutoInstrumentation.Native/lib/coreclr/src/: README.md
src/OpenTelemetry.AutoInstrumentation.Native/lib/coreclr/src/inc/: CrstTypeTool.cs  genheaders.cs  readme.md
src/OpenTelemetry.AutoInstrumentation.Native/lib/coreclr/src/pal/inc/rt/: sal.h
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x64-windows-static/: CONTROL
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x64-windows-static/debug/lib/pkgconfig/: fmt.pc
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x64-windows-static/include/fmt/: format-inl.h
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x64-windows-static/lib/pkgconfig/: fmt.pc
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x64-windows-static/share/fmt/: fmt-config-version.cmake  fmt-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x86-windows-static/: CONTROL
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x86-windows-static/debug/lib/: fmtd.lib
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x86-windows-static/include/fmt/: core.h
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x86-windows-static/lib/pkgconfig/: fmt.pc
src/OpenTelemetry.AutoInstrumentation.Native/lib/fmt_x86-windows-static/share/fmt/: fmt-config-version.cmake  fmt-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
test/test-applications/integrations/dependency-libs/TestApplication.ContinuousProfiler.NativeDep/: CMakeLists.txt  TestApplication.ContinuousProfiler.NativeDep.def  TestApplication.ContinuousProfiler.NativeDep.vcxproj  TestApplication.ContinuousProfiler.NativeDep.vcxproj.filters  callbacktest.cpp  callbacktest.h
(+4165 files in other folders)
